sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:7: error: not found: value plutPetit
      plutPetit(a,a-1)
      ^